modified:   .vscode/settings.json 	modified:   MDK-ARM/.vscode/keil-assistant.log 	modified:   MDK-ARM/.vscode/uv4.log 	modified:   MDK-ARM/.vscode/uv4.log.lock 	deleted:    MDK-ARM/GPIO_LED/GPIO_LED.axf 	modified:   MDK-ARM/GPIO_LED/GPIO_LED.build_log.htm 	modified:   MDK-ARM/GPIO_LED/GPIO_LED_GPIO_LED.dep 	deleted:    MDK-ARM/GPIO_LED/mpu9250.o 	modified:   MDK-ARM/.vscode/keil-assistant.log

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
         "main.h": "c"
-    }
+    },
+    "C_Cpp.default.compilerPath": "g:\\STM32\\GPIO\\GPIO_LED\\.vscode\\settings.json"
 }
